V0.2.1 Compiled with Java 8 instead of Java 11. Removed of classes